plugins {
  id 'java'
  id 'java-library'
  id 'jacoco'
  id 'maven-publish'
}

group 'com.github.hmcts'
version 'DEV-SNAPSHOT'

sourceCompatibility = 11
targetCompatibility = 11

repositories {
  mavenLocal()
  mavenCentral()
  maven { url 'https://jitpack.io' }
}

task highLevelDataSetup(type: JavaExec) {
  main = "uk.gov.hmcts.reform.civil.HighLevelDataSetupApp"
  classpath += sourceSets.main.runtimeClasspath
  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}

dependencies {

  implementation group: 'com.github.hmcts', name: 'befta-fw', version: '8.9.0'
  implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.12'

}
